--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,44 +6,45 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #0070d3;
+  --ifm-color-primary-dark: #0065be;
+  --ifm-color-primary-darker: #005fb3;
+  --ifm-color-primary-darkest: #004e94;
+  --ifm-color-primary-light: #007be8;
+  --ifm-color-primary-lighter: #0081f3;
+  --ifm-color-primary-lightest: #1390ff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
-  --ifm-navbar-background-color: rgba(182, 227, 157, 1);
+  --ifm-navbar-background-color: rgb(240, 240, 245);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-
-  --ifm-navbar-background-color: rgba(15, 50, 30, 1);
-}
-
-html[data-theme='light'] .footer {
-  --ifm-footer-background-color: rgba(182, 227, 157, 1);
+[data-theme='light'] .footer {
+  --ifm-footer-background-color: rgb(240, 240, 245);
   --ifm-footer-title-color: inherit;
   --ifm-footer-link-color: inherit;
   --ifm-footer-color: inherit;
 }
 
+/* For readability concerns, you should choose a lighter palette in dark mode. */
+html[data-theme='dark'] {
+  --ifm-color-primary: #72b6ec;
+  --ifm-color-primary-dark: #53a6e8;
+  --ifm-color-primary-darker: #449ee6;
+  --ifm-color-primary-darkest: #1d85d8;
+  --ifm-color-primary-light: #91c6f0;
+  --ifm-color-primary-lighter: #a0cef2;
+  --ifm-color-primary-lightest: #cfe6f8;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  --ifm-background-color: rgb(23, 27, 33);
+  --ifm-navbar-background-color: #111418;
+}
+
 html[data-theme='dark'] .footer {
-  --ifm-footer-background-color: rgba(15, 50, 30, 1);
+  --ifm-footer-background-color: #111418;
   --ifm-footer-title-color: inherit;
-  --ifm-footer-link-color: inherit;
+  --ifm-footer-link-color: var(--ifm-color-primary);
   --ifm-footer-color: inherit;
 }
 
@@ -60,6 +61,7 @@ html[data-theme='dark'] .footer {
 [data-theme='dark'] .navbar__logo {
   filter: invert(1);
 }
+
 [data-theme='light'] img#whitelogo {
   background-color: darkgray;
 }
