--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,17 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #0070d3;
-  --ifm-color-primary-dark: #0065be;
-  --ifm-color-primary-darker: #005fb3;
-  --ifm-color-primary-darkest: #004e94;
-  --ifm-color-primary-light: #007be8;
-  --ifm-color-primary-lighter: #0081f3;
-  --ifm-color-primary-lightest: #1390ff;
+  --ifm-color-primary: rgb(0, 112, 211);
+  --ifm-color-primary-dark: rgb(0, 101, 189);
+  --ifm-color-primary-darker: rgb(0, 95, 179);
+  --ifm-color-primary-darkest: rgb(0, 78, 148);
+  --ifm-color-primary-light: rgb(0, 123, 232);
+  --ifm-color-primary-lighter: rgb(0, 129, 243);
+  --ifm-color-primary-lightest: rgb(19, 144, 255);
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
   --ifm-navbar-background-color: rgb(240, 240, 245);
+}
+
+[data-theme='light'] ::selection {
+  background-color: color-mix(in hsl, var(--ifm-color-primary), white 70%);
+}
+
+[data-theme='dark'] ::selection {
+  background-color: color-mix(in hsl, var(--ifm-color-primary), black 70%);
 }
 
 [data-theme='light'] .footer {
@@ -28,21 +36,21 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 html[data-theme='dark'] {
-  --ifm-color-primary: #72b6ec;
-  --ifm-color-primary-dark: #53a6e8;
-  --ifm-color-primary-darker: #449ee6;
-  --ifm-color-primary-darkest: #1d85d8;
-  --ifm-color-primary-light: #91c6f0;
-  --ifm-color-primary-lighter: #a0cef2;
-  --ifm-color-primary-lightest: #cfe6f8;
+  --ifm-color-primary: rgb(114, 182, 236);
+  --ifm-color-primary-dark: rgb(83, 166, 232);
+  --ifm-color-primary-darker: rgb(68, 158, 230);
+  --ifm-color-primary-darkest: rgb(29, 133, 216);
+  --ifm-color-primary-light: rgb(145, 198, 240);
+  --ifm-color-primary-lighter: rgb(160, 206, 242);
+  --ifm-color-primary-lightest: rgb(207, 230, 248);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
   --ifm-background-color: rgb(23, 27, 33);
-  --ifm-navbar-background-color: #111418;
+  --ifm-navbar-background-color: rgb(17, 20, 24);
 }
 
 html[data-theme='dark'] .footer {
-  --ifm-footer-background-color: #111418;
+  --ifm-footer-background-color: rgb(17, 20, 24);
   --ifm-footer-title-color: inherit;
   --ifm-footer-link-color: var(--ifm-color-primary);
   --ifm-footer-color: inherit;
