--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,11 @@
  * work well for content-centric websites.
  */
 
+:root {
+  --ifm-container-width-xl: 1600px;
+  --ifm-container-width: 1280px;
+}
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: rgb(0, 112, 211);
