Fix styling for homepage

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,9 +6,6 @@
 .heroBanner {
   padding: 5rem 0;
   text-align: center;
-  position: relative;
-  overflow: hidden;
-  height: 100%;
 }
 
 @media screen and (max-width: 996px) {
@@ -22,4 +19,5 @@
   align-items: center;
   justify-content: center;
   --ifm-button-border-width: 0px;
+  --ifm-button-padding-vertical: 0.5rem;
 }
