Make home redirect to /admin, rework the admin index page pointing to all the important stuff user may be looking for, improve Button customizability and propagate to other <Button>s

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -118,3 +118,10 @@ html[data-theme="dark"] {
 	display: none !important;
 }
 
+.bold {
+    font-weight: bold !important;
+}
+
+main article > div.markdown {
+    padding: 0 2em 0 2em;
+}
